--- a/servers.conf
+++ b/servers.conf
@@ -1,4 +1,5 @@
-#88.198.182.136 front1 1
+# IP addres		name  web server  DB server
+88.198.182.136 front1 1
 88.198.182.138 front2 1
 88.198.182.140 front3 1
 88.198.182.142 front4 1
