--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 Order deny,allow
 Deny from all
 AuthType Basic
-AuthUserFile /var/www/netbox.co/mymon.test/.htpasswd
+AuthUserFile .htpasswd
 AuthName "Please Log In"
 require valid-user
 Allow from 188.138.234.131
