--- a/servers.conf
+++ b/servers.conf
@@ -1,4 +1,6 @@
-# IP addres		name  web server  DB server
+# IP addres		name  web   DB
+88.198.182.148 balancer1
+88.198.182.150 balancer2
 88.198.182.136 front1 1
 88.198.182.138 front2 1
 88.198.182.140 front3 1
