--- a/servers.conf
+++ b/servers.conf
@@ -15,7 +15,7 @@
 pkwteile.no-ip.biz lager 0 db
 188.138.234.38 gw 0
 78.47.178.8 api_blog 0
-148.251.177.86 mobtraff 1
+148.251.177.86 mobtraff 0
 144.76.108.19 webmail 0
 95.211.195.145 vpnin 0
 94.242.254.35 vpnout 0
@@ -23,3 +23,5 @@ pkwteile.no-ip.biz lager 0 db
 188.40.81.10 cheap 0
 5.178.84.242 wegner 0
 188.138.234.131 pbx 0
+136.243.42.200 lafront 0
+136.243.43.35 ladb 0 db
