--- a/servers.conf
+++ b/servers.conf
@@ -23,5 +23,5 @@ pkwteile.no-ip.biz lager 0 db
 188.40.81.10 cheap 0
 5.178.84.242 wegner 0
 188.138.234.131 pbx 0
-136.243.42.200 lafront 0
-136.243.43.35 ladb 0 db
+136.243.42.200 lafront 0 db
+136.243.43.35 ladb 0
