prevent direct access

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,4 @@
+<Files ~ "(\table.php)$">
 Order deny,allow
 Deny from all
-AuthType Basic
-AuthUserFile /etc/nginx/.htpasswd_mymon
-AuthName "Please Log In"
-require valid-user
-Allow from 188.138.234.131
-satisfy any
+</Files>
