editor -> editor.php

--- a/.htaccess
+++ b/.htaccess
@@ -27,3 +27,8 @@ RewriteRule ^(.*)$ /index.php?/$1 [L]
 	Order deny,allow
 	Deny from all
 </Files>
+
+<Files ~ "editor.php">
+	Order deny,allow
+	Deny from all
+</Files>
